# shardpack

./: .gitignore  Cargo.toml  README.md
docs/: draft.md
src/: bucket.rs  checksum.rs  error.rs  index.rs  lib.rs  shard.rs  storage.rs
src/index/: bucket.rs  mod.rs
src/shard/: config.rs  mod.rs  reader.rs  shard.rs  writer.rs
