[package]
name = "shardpack"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_bytes = "0.11.15"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
sha2 = "0.10.8"
lz4 = "1.28.1"
aws-sdk-s3 = { version = "1.71.0", optional = true }
async-trait = "0.1.85"
futures = "0.3.31"
flate2 = "1.0.35"
lz4_flex = "0.11.3"
byte_counter = "1.0.0"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.15.0"


[features]
aws = ["aws-sdk-s3"]
